hero-left paragraph changed

--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
         <div class="hero-left">
           <h1>Hello my name is <span>Avinash Mahto</span></h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
-            cupiditate consequuntur dolores non eligendi magnam, ad quaerat sit
-            perspiciatis suscipit hic voluptatibus a deleniti repudiandae sequi
-            quas nostrum eos. Voluptas?
+            I am a web developer and coder and have a good experience in
+            developing resposnive and functional websites |
           </p>
           <div class="hero-icons">
             <a href="https://www.facebook.com/Avinashmahto1998" target="_blank"
