so many changes

--- a/index.html
+++ b/index.html
@@ -42,18 +42,24 @@
 
       <div class="hero">
         <div class="hero-left">
-          <h1>Hello my name is <span>Avinash Mahto</span></h1>
+          <h3>Hello my name is <span>Avinash Mahto</span></h3>
           <p>
             I am a web developer and coder and have a good experience in
-            developing resposnive and functional websites |
+            developing responsive and functional websites |
           </p>
           <div class="hero-icons">
             <a href="https://www.facebook.com/Avinashmahto1998" target="_blank"
               ><i class="fab fa-facebook"></i
             ></a>
-            <a href="www.facebook.com"><i class="fab fa-instagram"></i></a>
-            <a href="www.facebook.com"><i class="fab fa-twitter"></i></a>
-            <a href="www.facebook.com"><i class="fab fa-patreon"></i></a>
+            <a href="https://www.instagram.com/mahto_codes/" target="_blank"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a href="https://www.buymeacoffee.com/dashboard"
+              ><i class="fas fa-coffee"></i
+            ></a>
+            <a href="https://www.patreon.com/user?u=90265412" target="_blank"
+              ><i class="fab fa-patreon"></i
+            ></a>
           </div>
         </div>
         <div class="hero-right">
@@ -63,6 +69,39 @@
         </div>
       </div>
     </header>
+
+    <hr />
+    <!-- ==========================
+    SKILLS-SECTION
+  ================================== -->
+    <section class="section skills">
+      <h2>My skills</h2>
+      <div class="single-skill">
+        <h5>HTML</h5>
+        <div class="skill-bar html">
+          <div><p>80%</p></div>
+        </div>
+      </div>
+      <div class="single-skill">
+        <h5>CSS</h5>
+        <div class="skill-bar css">
+          <div><p>85%</p></div>
+        </div>
+      </div>
+      <div class="single-skill">
+        <h5>JAVASCRIPT</h5>
+        <div class="skill-bar javascript">
+          <div><p>65%</p></div>
+        </div>
+      </div>
+      <div class="single-skill">
+        <h5>REACT JS</h5>
+        <div class="skill-bar react">
+          <div><p>60%</p></div>
+        </div>
+      </div>
+    </section>
+    <!-- END OF SKILLS SECTION -->
 
     <script src="./app.js"></script>
   </body>
