--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <nav class="navbar">
         <a href="#" class="logo">Rudra</a>
         <ul class="nav-links">
-          <li><a href="#">about</a></li>
-          <li><a href="#">skills</a></li>
-          <li><a href="#">gallery</a></li>
-          <li><a href="#">contact</a></li>
+          <li><a href="#about">about</a></li>
+          <li><a href="#skills">skills</a></li>
+          <li><a href="#gallery">gallery</a></li>
+          <li><a href="#contact">contact</a></li>
         </ul>
         <div class="btn-container">
           <button class="bars-btn nav-btn"><i class="fas fa-bars"></i></button
@@ -74,8 +74,8 @@
     <!-- ==========================
     SKILLS-SECTION
   ================================== -->
-    <section class="section skills">
-      <h3>My skills</h3>
+    <section class="section" id="skills">
+      <h3 class="section-title">My skills</h3>
       <div class="single-skill">
         <h5>HTML</h5>
         <div class="skill-bar html">
@@ -101,8 +101,26 @@
         </div>
       </div>
     </section>
+    <hr />
     <!-- END OF SKILLS SECTION -->
 
+    <!-- ========================
+      Gallery Section
+    ============================== -->
+    <section class="section" id="gallery">
+      <h3 class="section-title">my gallery</h3>
+      <div class="images-container">
+        <div class=""><img src="./images/Rudra.jpg" alt="" /></div>
+        <div><img src="./images/Rudra15.jpg" alt="" /></div>
+        <div><img src="./images/Rudra2.jpg" alt="" /></div>
+        <div><img src="./images/Rudra9.jpg" alt="" /></div>
+        <div><img src="./images/Rudra4.jpg" alt="" /></div>
+        <div><img src="./images/Rudra5.jpg" alt="" /></div>
+        <div><img src="./images/Rudra5.jpg" alt="" /></div>
+        <div><img src="./images/Rudra5.jpg" alt="" /></div>
+        <div><img src="./images/Rudra5.jpg" alt="" /></div>
+      </div>
+    </section>
     <script src="./app.js"></script>
   </body>
 </html>
