--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <!-- header -->
+    <!-- 
+      HEADER
+     -->
     <header>
-      <!-- ============
-      navbar
-      ================== -->
+      <!-- NAVBAR -->
       <nav class="navbar">
         <a href="#" class="logo">Rudra</a>
         <ul class="nav-links">
@@ -37,7 +37,7 @@
         </div>
       </nav>
       <!-- ==============
-        hero section
+        HERO SECTION
       =================== -->
 
       <div class="hero">
@@ -105,22 +105,84 @@
     <!-- END OF SKILLS SECTION -->
 
     <!-- ========================
-      Gallery Section
+      GALLERY SECTION
     ============================== -->
     <section class="section" id="gallery">
       <h3 class="section-title">my gallery</h3>
       <div class="images-container">
-        <div class=""><img src="./images/Rudra.jpg" alt="" /></div>
+        <div class="img-container"><img src="./images/Rudra.jpg" alt="" /></div>
         <div><img src="./images/Rudra15.jpg" alt="" /></div>
         <div><img src="./images/Rudra2.jpg" alt="" /></div>
         <div><img src="./images/Rudra9.jpg" alt="" /></div>
         <div><img src="./images/Rudra4.jpg" alt="" /></div>
         <div><img src="./images/Rudra5.jpg" alt="" /></div>
-        <div><img src="./images/Rudra5.jpg" alt="" /></div>
-        <div><img src="./images/Rudra5.jpg" alt="" /></div>
-        <div><img src="./images/Rudra5.jpg" alt="" /></div>
+        <div><img src="./images/Rudra7.jpg" alt="" /></div>
+        <div><img src="./images/Rudra3.jpg" alt="" /></div>
+        <div><img src="./images/Rudra4.jpg" alt="" /></div>
       </div>
     </section>
+    <hr />
+    <!-- END OF GALLERY SECTION -->
+    <!-- =========================
+      FORM SECTION
+      ============================ -->
+    <section class="section contact" id="contact">
+      <h3 class="section-title">contact me</h3>
+      <div class="contact-container">
+        <div class="contact-info">
+          <p>
+            here you can contact me on gmail or connect with me using different
+            social media or you can ask me questions or query by filling the
+            contact form
+          </p>
+
+          <div class="connect">
+            <h4>connect with me</h4>
+            <p>mahtoconnects@gmail.com</p>
+            <a href="https://www.instagram.com/mahto_codes/" target="_blank"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a href="https://www.facebook.com/Avinashmahto1998" target="_blank"
+              ><i class="fab fa-facebook"></i
+            ></a>
+
+            <a href="https://www.buymeacoffee.com/dashboard"
+              ><i class="fab fa-youtube"></i
+            ></a>
+            <a href="https://www.patreon.com/user?u=90265412" target="_blank"
+              ><i class="fab fa-patreon"></i
+            ></a>
+          </div>
+        </div>
+        <form action="">
+          <input
+            class="input"
+            type="name"
+            name="name"
+            placeholder="Enter your name"
+          />
+          <input
+            class="input"
+            type="email"
+            name="email"
+            placeholder="Enter your email"
+          />
+          <textarea
+            class="input"
+            name="message"
+            placeholder="your message"
+          ></textarea>
+          <button class="form-btn">send</button>
+        </form>
+      </div>
+    </section>
+    <!-- END OF FORM SECTION -->
+    <!-- ====================
+        FOOTER SECTION
+    ============================ -->
+    <footer>
+      <p>copyright &copy;MahtoCodes All rights reserved</p>
+    </footer>
     <script src="./app.js"></script>
   </body>
 </html>
