changes in icons hover and look of hero icons

--- a/index.html
+++ b/index.html
@@ -48,14 +48,16 @@
             developing responsive and functional websites |
           </p>
           <div class="hero-icons">
-            <a href="https://www.facebook.com/Avinashmahto1998" target="_blank"
-              ><i class="fab fa-facebook"></i
-            ></a>
             <a href="https://www.instagram.com/mahto_codes/" target="_blank"
               ><i class="fab fa-instagram"></i
             ></a>
-            <a href="https://www.buymeacoffee.com/dashboard"
-              ><i class="fas fa-coffee"></i
+            <a href="https://www.facebook.com/Avinashmahto1998" target="_blank"
+              ><i class="fab fa-facebook"></i
+            ></a>
+            <a
+              href="https://www.youtube.com/channel/UCI5yn_H6N3pTjE37CFlpeGw"
+              target="_blank"
+              ><i class="fab fa-youtube"></i
             ></a>
             <a href="https://www.patreon.com/user?u=90265412" target="_blank"
               ><i class="fab fa-patreon"></i
@@ -146,7 +148,9 @@
               ><i class="fab fa-facebook"></i
             ></a>
 
-            <a href="https://www.youtube.com/channel/UCI5yn_H6N3pTjE37CFlpeGw"
+            <a
+              href="https://www.youtube.com/channel/UCI5yn_H6N3pTjE37CFlpeGw"
+              target="_blank"
               ><i class="fab fa-youtube"></i
             ></a>
             <a href="https://www.patreon.com/user?u=90265412" target="_blank"
@@ -168,7 +172,7 @@
             placeholder="Enter your email"
           />
           <textarea
-            class="input"
+            class="input textarea"
             name="message"
             placeholder="your message"
           ></textarea>
